# xeus-utils

./: .gitignore  CMakeLists.txt  README.md  environment-dev.yml  environment.yml  xeus-utilsConfig.cmake.in
.github/workflows/: main.yml
docs/source/: dev-build-options.rst  index.rst
include/xeus-utils/: inflate.h  untar.h  xeus_stream.hpp  xeus_utils_config.hpp  xfetch.hpp  xfilesystem.hpp  xinterpreter.hpp  xmagic.hpp  xzip.hpp
notebooks/: xeus-utils.ipynb
share/jupyter/kernels/xutils/: kernel.json.in
src/: main.cpp  main_emscripten_kernel.cpp  xinterpreter.cpp
test/: test_xutils_kernel.py
